fix position for info modal on desktop to align center

--- a/src/components/InfoModal/infoModal.module.css
+++ b/src/components/InfoModal/infoModal.module.css
@@ -52,6 +52,9 @@
 }
 
 @media screen and (min-width: 700px) {
+  .modal_container {
+    align-items: center;
+  }
   .data_container {
     display: grid;
     grid-template-columns: 1fr 1fr;
